Fixed top navbar on mobile

--- a/inspections/static/css/style.css
+++ b/inspections/static/css/style.css
@@ -40,13 +40,9 @@ ul.footer-nav {
 ul.footer-nav li {
     display:inline;
     margin-right: 5%;
-}
-ul.footer-nav li {
-    display:inline;
-    margin-right: 5%;
     font-size: 20px;
-}
 
+}
 
 .home-p a b{
     vertical-align: bottom;    
@@ -166,6 +162,10 @@ button.ui-button-left {
     display: block;
   }
 }
+.navbar-padding{
+  height: 60px;
+}
+
 @media only screen and (max-width: 729px) {
   ul.footer-nav li{
     display: block;
@@ -174,5 +174,17 @@ button.ui-button-left {
     padding-top: 2px;
     margin-bottom: 10px;
     width: 100%;
+  }
+
+}
+@media (max-width: 979px) {
+  .navbar-fixed-top {
+      position: fixed;
+      margin-left: 0px;
+      margin-right: 0px;
+      height: 0px;
+  }
+  .navbar-padding{
+      height: 85px;   
   }
 }
